Actualizar enlaces de navegación en index.html

--- a/index.html
+++ b/index.html
@@ -286,15 +286,15 @@
                 </div>
                 <nav>
                     <ul class="mg-0">
-                        <li class="txt-input">Sobre mi</li>
-                        <li class="txt-input">Cursos</li>
-                        <li class="txt-input">Contacto</li>
+                        <li class="txt-input"><a href="#conoceme">Sobre mi</a></li>
+                        <li class="txt-input"><a href="#curso">Curso</a></li>
+                        <li class="txt-input"><a href="#contacto">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
         <main>
-            <section>
+            <section id="land">
                 <div class="row container">
                     <div class="col display">
                         <h1 class="txt-outfit mg-0">Desarrolla tu</h1>
@@ -302,8 +302,8 @@
                         <h2 class="txt-outfit mg-0" style="width: 100%; text-align: end;">Con Caroline Sada</h2>
                         <br><br>
                         <div class="row" style="justify-content: center;">
-                            <a href="#" class="btn bg-teal txt-light"><i class="fa-solid fa-magnifying-glass"></i> Explorar curso</a>
-                            <a href="#" class="btn bg-dark txt-light"> Contáctame</a>
+                            <a href="#curso" class="btn bg-teal txt-light"><i class="fa-solid fa-magnifying-glass"></i> Explorar curso</a>
+                            <a href="#contacto" class="btn bg-dark txt-light"> Contáctame</a>
                         </div>
                     </div>
                     <div class="image">
@@ -315,7 +315,7 @@
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
             </section>
-            <section>
+            <section id="conoceme">
                 <div class="container">
                     <h1>Conóceme</h1>
                     <div class="row">
@@ -337,7 +337,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section id="curso">
                 <div class="container">
                     <h1>Curso</h1>
                 </div>
@@ -350,7 +350,7 @@
                             <div class="col" style="max-width: 50%;">
                                 <h2 class="txt-pacifico txt-light" style="font-size: 3.5em; font-weight: 300; text-align: center;">Emprendimiento y Finanzas</h2>
                                 <p style="text-wrap: pretty; text-align: center;">¡Aprovecha y administra al máximo los recursos para llegar al éxito!</p>
-                                <a href="#" class="btn bg-dark txt-light"> Contáctame</a>
+                                <a href="#contacto" class="btn bg-dark txt-light"> Contáctame</a>
                             </div>
                         </div>
                         <br>
@@ -358,7 +358,7 @@
                 </div>
 
             </section>
-            <section>
+            <section id="contacto">
                 <div class="container">
                     <h1>Contacto</h1>
                     <div class="row" style="margin: 0 20px; justify-content: space-around;">
