optimizar imagenes, añadir aria-label

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 </div>
                 <nav>
                     <ul class="mg-0">
-                        <li class="txt-input"><a href="#conoceme">Sobre mi</a></li>
-                        <li class="txt-input"><a href="#curso">Curso</a></li>
-                        <li class="txt-input"><a href="#contacto">Contacto</a></li>
+                        <li class="txt-input"><a href="#conoceme" aria-label="Direccion al acerca de">Sobre mi</a></li>
+                        <li class="txt-input"><a href="#curso" aria-label="Direccion al curso">Curso</a></li>
+                        <li class="txt-input"><a href="#contacto" aria-label="Direccion al contacto">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
@@ -37,8 +37,8 @@
                             <h2 class="txt-outfit mg-0" style="width: 100%; text-align: end;">Con Caroline Sada</h2>
                             <br><br>
                             <div class="fx-row" style="justify-content: center;">
-                                <a href="#curso" class="pg-btn bg-teal txt-light"><i class="fa-solid fa-magnifying-glass"></i> Explorar curso</a>
-                                <a href="#contacto" class="pg-btn bg-dark txt-light"> Contáctame</a>
+                                <a href="#curso" class="pg-btn bg-teal txt-light" aria-label="Direccion al curso"><i class="fa-solid fa-magnifying-glass"></i> Explorar curso</a>
+                                <a href="#contacto" class="pg-btn bg-dark txt-light" aria-label="Direccion al contacto"> Contáctame</a>
                             </div>
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-12">
@@ -67,10 +67,10 @@
         
                             <h3>Redes Sociales</h3>
                             <ul class="social">
-                                <li><a href="#" class="social"><i class="fa-brands fa-tiktok"></i></li></a>
-                                <li><a href="#" class="social"><i class="fa-brands fa-instagram"></i></li></a>
-                                <li><a href="#" class="social"><i class="fa-brands fa-youtube"></i></li></a>
-                                <li><a href="#" class="social"><i class="fa-brands fa-x-twitter"></i></li></a>
+                                <li><a href="#" class="social" aria-label="Direccion a la red social TikTok"><i class="fa-brands fa-tiktok"></i></li></a>
+                                <li><a href="#" class="social" aria-label="Direccion a la red social Instagram"><i class="fa-brands fa-instagram"></i></li></a>
+                                <li><a href="#" class="social" aria-label="Direccion a la red social YouTube"><i class="fa-brands fa-youtube"></i></li></a>
+                                <li><a href="#" class="social" aria-label="Direccion a la red social X / Twitter"><i class="fa-brands fa-x-twitter"></i></li></a>
                             </ul> 
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                             <div class="col-lg-6 col-md-6 col-sm-12 text-center mt-5">
                                 <h2 class="txt-pacifico txt-light" style="font-size: 3.5em; font-weight: 300; text-align: center;">Emprendimiento y Finanzas</h2>
                                 <p style="text-wrap: pretty; text-align: center;">¡Aprovecha y administra al máximo los recursos para llegar al éxito!</p>
-                                <a href="#contacto" class="pg-btn bg-dark txt-light"> Contáctame</a>
+                                <a href="#contacto" class="pg-btn bg-dark txt-light" aria-label="Direccion al contacto"> Contáctame</a>
                             </div>
                         </div>
                         <div style="width: 1200px; display: flex; margin: 30px;">
